<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mainLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/background_animated"
  tools:context=".SaisieEchantillon">

  <TextView
    android:id="@+id/tv2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_centerHorizontal="true"
    android:text="@string/majTitle"
    android:textAlignment="center"
    android:textColor="@color/colorPrimary"
    android:textSize="22sp"/>
  <EditText
    android:id="@+id/nD1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="75dp"
    android:layout_below="@+id/tv2"
    android:layout_centerHorizontal="true"
    android:ems="10"
    android:hint="@string/majCode"
    android:inputType="textPersonName"/>
  <EditText
    android:id="@+id/pt2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_below="@+id/nD1"
    android:layout_centerHorizontal="true"
    android:ems="10"
    android:hint="@string/majLibelle"
    android:inputType="textPersonName"/>
  <EditText
    android:id="@+id/nD2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_below="@+id/pt2"
    android:layout_centerHorizontal="true"
    android:ems="10"
    android:hint="@string/majStock"
    android:inputType="numberDecimal"/>
  <Button
    android:id="@+id/btAdd"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dp"
    android:layout_marginEnd="50dp"
    android:layout_above="@+id/btSuppr"
    android:layout_alignParentEnd="true"
    android:background="@drawable/button_main"
    android:minWidth="100dp"
    android:text="@string/add"/>
  <Button
    android:id="@+id/btSuppr"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:layout_marginEnd="50dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:background="@drawable/button_main"
    android:minWidth="100dp"
    android:text="@string/delete"/>
  <Button
    android:id="@+id/btFinish"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:layout_marginStart="50dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:background="@drawable/button_main"
    android:minWidth="100dp"
    android:text="@string/leave"/>
  <Button
    android:id="@+id/btListeView"
    android:layout_width="215dp"
    android:layout_height="145dp"
    android:layout_alignBottom="@+id/pt2"
    android:layout_centerHorizontal="true"
    android:background="@android:color/transparent"
    />
</RelativeLayout>